<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fb_background">
    <!-- Image courtesy of Pixabay.com on a Creative Commons free license,
    no attribution required, but it is a great resource for those who might
    browse this code on GitHub -->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.nflscorekeeper.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:layout_margin="16dp"
                android:textColor="#616161"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/blank" />

            <Button
                android:id="@+id/btn_touchdownA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:onClick="touchdownA"
                android:text="@string/TD"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_safetyA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:onClick="safetyA"
                android:text="@string/Safety"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_field_goalA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:onClick="fieldGoalA"
                android:text="@string/FG"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_extra_pointA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:onClick="extraPointA"
                android:text="@string/XP"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:layout_margin="16dp"
                android:textColor="#616161"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/blank" />

            <Button
                android:id="@+id/btn_touchdownB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:onClick="touchdownB"
                android:text="@string/TD"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_safetyB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:onClick="safetyB"
                android:text="@string/Safety"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_field_goalB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:onClick="fieldGoalB"
                android:text="@string/FG"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_extra_pointB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_button"
                android:onClick="extraPointB"
                android:text="@string/XP"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:onClick="resetScores"
        android:text="@string/Reset"
        android:textColor="#FFFFFF" />

</RelativeLayout>